--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,67 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --foreground: 249, 248, 252;
+  --background: #0a090b;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: rgb(var(--foreground));
+  background-color: var(--background);
+    cursor: url(/cursor.png), auto;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+/* custom styles */
+
+.frame {
+  width: 800px;
+  height: 300px;
+}
+
+
+.prize-display {
+  position: absolute;
+  top: 100;
+}
+
+.row {
+  width: 100%;
+  height: 100px;
+  overflow: hidden;
+  position: relative;
+  white-space: nowrap;
+}
+
+.row img {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  position: relative;
+  animation-duration: .5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.row.ltr img {
+  animation-name: scrollRight;
+}
+
+.row.rtl img {
+  animation-name: scrollLeft;
+}
+
+@keyframes scrollRight {
+  0% { left: 0%; }
+  100% { left: -100%; }
+}
+
+@keyframes scrollLeft {
+  0% { right: 0%; }
+  100% { right: -100%; }
 }
